charon/tests/ui/issue-91-enum-to-discriminant-cast.out
error: Unsupported statement kind: intrinsic
  --> tests/ui/issue-91-enum-to-discriminant-cast.rs:16:13
   |
16 |     let _ = x as isize;
   |             ^^^^^^^^^^

error: aborting due to previous error

[ ERROR charon_driver:192] The extraction encountered 1 errors
